# keterrest

./: .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  staging.docker-compose.yml
migrations/: 20240608030350_CreateUsersTable.up.sql  20240618032149_AddAuthenColsToUsersTable.down.sql  20240618032149_AddAuthenColsToUsersTable.up.sql  20240701050144_AddPermissionsTable.down.sql  20240701050144_AddPermissionsTable.up.sql
scripts/: migrate.sh
src/: main.rs
src/config/: mod.rs  pg_database.rs  settings.rs
src/middleware/: auth.rs
src/model/: auth.rs  file.rs  mod.rs  permission.rs  user.rs
src/repository/: file_repository.rs  mod.rs  user_repository.rs
src/router/: auth.rs  mod.rs  root.rs  upload.rs  user.rs
src/service/: auth_service.rs  file_service.rs  mod.rs  user_service.rs
src/util/: api_request.rs  api_response.rs  constants.rs  macros.rs  mod.rs
